unit/src/dict.rs

impl dictType {
    #[inline]
    pub fn no_value(&self) -> ::core::ffi::c_uint {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_no_value(&mut self, val: ::core::ffi::c_uint) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn keys_are_odd(&self) -> ::core::ffi::c_uint {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_keys_are_odd(&mut self, val: ::core::ffi::c_uint) {
        unsafe {
            let val: u32 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        no_value: ::core::ffi::c_uint,
        keys_are_odd: ::core::ffi::c_uint,
    ) -> __BindgenBitfieldUnit<[u8; 1usize]> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize]> = Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let no_value: u32 = unsafe { ::core::mem::transmute(no_value) };
            no_value as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let keys_are_odd: u32 = unsafe { ::core::mem::transmute(keys_are_odd) };
            keys_are_odd as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dict {
    pub type_: *mut dictType,
    pub ht_table: [*mut *mut dictEntry; 2usize],
    pub ht_used: [::core::ffi::c_ulong; 2usize],
    pub rehashidx: ::core::ffi::c_long,
    pub pauserehash: i16,
    pub ht_size_exp: [::core::ffi::c_schar; 2usize],
}
#[test]
fn bindgen_test_layout_dict() {
    const UNINIT: ::core::mem::MaybeUninit<dict> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<dict>(),
        56usize,
        concat!("Size of: ", stringify!(dict))
    );
    assert_eq!(
        ::core::mem::align_of::<dict>(),
        8usize,
        concat!("Alignment of ", stringify!(dict))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dict),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ht_table) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(dict),
            "::",
            stringify!(ht_table)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ht_used) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(dict),
            "::",
            stringify!(ht_used)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).rehashidx) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(dict),
            "::",
            stringify!(rehashidx)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).pauserehash) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(dict),
            "::",
            stringify!(pauserehash)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).ht_size_exp) as usize - ptr as usize },
        50usize,
        concat!(
            "Offset of field: ",
            stringify!(dict),
            "::",
            stringify!(ht_size_exp)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dictIterator {
    pub d: *mut dict,
    pub index: ::core::ffi::c_long,
    pub table: ::core::ffi::c_int,
    pub safe: ::core::ffi::c_int,
    pub entry: *mut dictEntry,
    pub nextEntry: *mut dictEntry,
    pub fingerprint: ::core::ffi::c_ulonglong,
}
#[test]
fn bindgen_test_layout_dictIterator() {
    const UNINIT: ::core::mem::MaybeUninit<dictIterator> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<dictIterator>(),
        48usize,
        concat!("Size of: ", stringify!(dictIterator))
    );
    assert_eq!(
        ::core::mem::align_of::<dictIterator>(),
        8usize,
        concat!("Alignment of ", stringify!(dictIterator))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).d) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).index) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).table) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(table)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).safe) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(safe)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).nextEntry) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(nextEntry)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fingerprint) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(dictIterator),
            "::",
            stringify!(fingerprint)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dictStats {
    pub htidx: ::core::ffi::c_int,
    pub buckets: ::core::ffi::c_ulong,
    pub maxChainLen: ::core::ffi::c_ulong,
    pub totalChainLen: ::core::ffi::c_ulong,
    pub htSize: ::core::ffi::c_ulong,
    pub htUsed: ::core::ffi::c_ulong,
    pub clvector: *mut ::core::ffi::c_ulong,
}
#[test]
fn bindgen_test_layout_dictStats() {
    const UNINIT: ::core::mem::MaybeUninit<dictStats> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<dictStats>(),
        56usize,
        concat!("Size of: ", stringify!(dictStats))
    );
    assert_eq!(
        ::core::mem::align_of::<dictStats>(),
        8usize,
        concat!("Alignment of ", stringify!(dictStats))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).htidx) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(htidx)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buckets) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(buckets)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).maxChainLen) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(maxChainLen)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).totalChainLen) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(totalChainLen)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).htSize) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(htSize)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).htUsed) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(htUsed)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).clvector) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(dictStats),
            "::",
            stringify!(clvector)
        )
    );
}
pub type dictScanFunction = ::core::option::Option<
    unsafe extern "C" fn(privdata: *mut ::core::ffi::c_void, de: *const dictEntry),
>;
pub type dictDefragAllocFunction = ::core::option::Option<
    unsafe extern "C" fn(ptr: *mut ::core::ffi::c_void) -> *mut ::core::ffi::c_void,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct dictDefragFunctions {
    pub defragAlloc: dictDefragAllocFunction,
    pub defragKey: dictDefragAllocFunction,
    pub defragVal: dictDefragAllocFunction,
}
#[test]
fn bindgen_test_layout_dictDefragFunctions() {
    const UNINIT: ::core::mem::MaybeUninit<dictDefragFunctions> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<dictDefragFunctions>(),
        24usize,
        concat!("Size of: ", stringify!(dictDefragFunctions))
    );
    assert_eq!(
        ::core::mem::align_of::<dictDefragFunctions>(),
        8usize,
        concat!("Alignment of ", stringify!(dictDefragFunctions))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).defragAlloc) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dictDefragFunctions),
            "::",
            stringify!(defragAlloc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).defragKey) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(dictDefragFunctions),
            "::",
            stringify!(defragKey)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).defragVal) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(dictDefragFunctions),
            "::",
            stringify!(defragVal)
        )
    );
}
pub const dictResizeEnable_DICT_RESIZE_ENABLE: dictResizeEnable = 0;
pub const dictResizeEnable_DICT_RESIZE_AVOID: dictResizeEnable = 1;
pub const dictResizeEnable_DICT_RESIZE_FORBID: dictResizeEnable = 2;
pub type dictResizeEnable = ::core::ffi::c_uint;
extern "C" {
    pub fn dictCreate(type_: *mut dictType) -> *mut dict;
}
extern "C" {
    pub fn dictCreateMultiple(type_: *mut dictType, count: ::core::ffi::c_int) -> *mut *mut dict;
}
extern "C" {
    pub fn dictExpand(d: *mut dict, size: ::core::ffi::c_ulong) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictTryExpand(d: *mut dict, size: ::core::ffi::c_ulong) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictMetadata(d: *mut dict) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn dictAdd(
        d: *mut dict,
        key: *mut ::core::ffi::c_void,
        val: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn dictAddRaw(
        d: *mut dict,
        key: *mut ::core::ffi::c_void,
        existing: *mut *mut dictEntry,
    ) -> *mut dictEntry;
}
